[FIXED] Issue with the flex's overflow

--- a/public/css/css/structure.css
+++ b/public/css/css/structure.css
@@ -116,7 +116,7 @@ body {
   display: grid;
 }
 [class*=template]:not(.templateOne) {
-  grid-template-columns: 3fr 2fr;
+  grid-template-columns: calc(65% - .5em) calc(35% - .5em);
 }
 [class*=template] > * {
   padding: 0 0.3em;
