--- a/public/css/sass/components/structure/_base.scss
+++ b/public/css/sass/components/structure/_base.scss
@@ -77,7 +77,7 @@ body {
     margin: auto;
     display: grid;
 
-    &:not(.templateOne) { grid-template-columns: 3fr 2fr; }
+    &:not(.templateOne) { grid-template-columns: calc(65% - .5em) calc(35% - .5em); }
     & > * { padding: 0 $emM; }
     & > .top { grid-area: top; }
     & > .left { grid-area: left; }
